fix harvesting page scrollbars

--- a/src/views/pages/harvesting/HarvestedBlocksList/HarvestedBlocksList.less
+++ b/src/views/pages/harvesting/HarvestedBlocksList/HarvestedBlocksList.less
@@ -13,7 +13,7 @@
 
     .table-component {
         height: calc(100% - 1.35rem);
-        overflow-y: scroll;
+        overflow-y: auto;
     }
 
     /deep/.ivu-table-header {
